<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/sort_by"
        app:showAsAction="always"
        >

        <menu>

            <item

                android:id="@+id/most_pop"
                android:icon="@android:drawable/ic_menu_my_calendar"
                android:checkable="true"
                android:checked="true"
                android:onClick="sortingMovies"
                android:title="@string/most_popular" />

            <item
                android:id="@+id/top_rate"
                android:icon="@android:drawable/star_on"
                android:checkable="true"
                android:onClick="sortingMovies"
                android:title="@string/top_rated" />
            <item
                android:id="@+id/favorites"
                android:icon="@android:drawable/ic_menu_myplaces"
                android:checkable="true"
                android:onClick="sortingMovies"
                android:title="@string/my_favorites"
                />


        </menu>
    </item>

</menu>